--- a/assets/sass/layouts/_content.scss
+++ b/assets/sass/layouts/_content.scss
@@ -11,7 +11,7 @@
 }
 
 .hentry {
-    margin: 0 0 1.5em;
+    margin: 0 0 0;
 }
 
 .byline,
@@ -27,7 +27,7 @@
 .page-content,
 .entry-content,
 .entry-summary {
-    margin: 1.5em 0 0;
+    margin: 0 0 0;
 }
 
 .page-links {
