--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -1,6 +1,6 @@
 header {
-    position: relative;
-    z-index: 1;
+    //position: relative;
+    //z-index: 1;
 }
 .site-branding {
     text-align: center;
