--- a/assets/sass/layouts/_structure.scss
+++ b/assets/sass/layouts/_structure.scss
@@ -35,8 +35,8 @@ html {
 }
 
 main#main {
-	position: relative;
-	z-index: 0;
+	//position: relative;
+	//z-index: 0;
 }
 
 #primary {
